--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://ze7111.github.io/",
+  "homepage": "http://dhruvan.us.to/",
   "private": true,
   "dependencies": {
     "@react-pdf/renderer": "^2.2.0",
